--- a/gui/main.ui
+++ b/gui/main.ui
@@ -39,6 +39,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="buttonListEvents">
+       <property name="text">
+        <string>listEvents test</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="buttonDisplayResults">
        <property name="text">
         <string>Display API test results</string>
@@ -49,6 +56,13 @@
       <widget class="QPushButton" name="buttonAdjustBookmakerOdds">
        <property name="text">
         <string>Adjust Bookmaker Odds</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="buttonLogoutTest">
+       <property name="text">
+        <string>Logout</string>
        </property>
       </widget>
      </item>
